--- a/src/components/common/modal/style.module.scss
+++ b/src/components/common/modal/style.module.scss
@@ -30,7 +30,7 @@
         background-color: #fff;
         border: 0;
         border-radius: 50%;
-        z-index: 0;
+        z-index: 2;
     }
     & .btn_container {
         position: absolute;
